vgc_add_library(geometry
    THIRD_DEPENDENCIES
        libtess2

    VGC_DEPENDENCIES
        core

    CPP_HEADER_FILES
        api.h
        arc.h
        bezier.h
        bezierspline.h
        bezierspline1d.h
        bezierspline2d.h
        camera2d.h
        catmullrom.h
        curve.h
        curvecommand.h
        curves2d.h
        fillstyle.h
        interpolatingstroke.h
        logcategories.h
        mat.h
        mat2d.h
        mat2f.h
        mat3d.h
        mat3f.h
        mat4d.h
        mat4f.h
        polyline.h
        polyline2.h
        polyline2d.h
        polyline2f.h
        range1d.h
        range1f.h
        rangealign.h
        rangeanchor.h
        rect2d.h
        rect2f.h
        rectalign.h
        rectanchor.h
        segment.h
        segment2d.h
        segment2f.h
        stride.h
        stroke.h
        strokestyle.h
        tesselator.h
        triangle2d.h
        triangle2f.h
        vec.h
        vec2.h
        vec3.h
        vec4.h
        windingrule.h
        yuksel.h

    CPP_SOURCE_FILES
        camera2d.cpp
        catmullrom.cpp
        curve.cpp
        curves2d.cpp
        curvecommand.cpp
        fillstyle.cpp
        interpolatingstroke.cpp
        logcategories.cpp
        mat2d.cpp
        mat2f.cpp
        mat3d.cpp
        mat3f.cpp
        mat4d.cpp
        mat4f.cpp
        range1d.cpp
        range1f.cpp
        rangealign.cpp
        rangeanchor.cpp
        rect2d.cpp
        rect2f.cpp
        rectalign.cpp
        rectanchor.cpp
        segment.cpp
        segment2d.cpp
        segment2f.cpp
        stroke.cpp
        strokestyle.cpp
        tesselator.cpp
        triangle2d.cpp
        triangle2f.cpp
        windingrule.cpp
        yuksel.cpp

    NATVIS_FILES
        tools/vgcgeometry.natvis
)

add_subdirectory(wraps)
add_subdirectory(tests)
