vgc_add_library(geometry
    THIRD_DEPENDENCIES
        libtess2

    VGC_DEPENDENCIES
        core

    CPP_HEADER_FILES
        api.h
        arc.h
        bezier.h
        bezierspline.h
        bezierspline1d.h
        bezierspline2d.h
        camera2d.h
        catmullrom.h
        curve.h
        curvecommand.h
        curves2d.h
        fillstyle.h
        interpolatingstroke.h
        logcategories.h
        mat.h
        mat2.h
        mat3.h
        mat4.h
        polyline.h
        polyline2.h
        polyline2d.h
        polyline2f.h
        range1.h
        rangealign.h
        rangeanchor.h
        rect2.h
        rectalign.h
        rectanchor.h
        segment.h
        segment2.h
        stride.h
        stroke.h
        strokestyle.h
        tesselator.h
        triangle2.h
        vec.h
        vec2.h
        vec3.h
        vec4.h
        windingrule.h
        yuksel.h

        detail/segmentintersect.h

    CPP_SOURCE_FILES
        camera2d.cpp
        catmullrom.cpp
        curve.cpp
        curves2d.cpp
        curvecommand.cpp
        fillstyle.cpp
        interpolatingstroke.cpp
        logcategories.cpp
        rangealign.cpp
        rangeanchor.cpp
        rectalign.cpp
        rectanchor.cpp
        segment.cpp
        segment2.cpp
        stroke.cpp
        strokestyle.cpp
        tesselator.cpp
        windingrule.cpp
        yuksel.cpp

    NATVIS_FILES
        tools/vgcgeometry.natvis
)

add_subdirectory(wraps)
add_subdirectory(tests)
